Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
     <td>3,999,759</td>
   </tr>
   <tr>
-    <td></td>
+    <td>Chicago</td>
+    <td>Illinois</td>
+    <td>2,716,450</td>
+  </tr>
+  <tr>
+    <td>Houston</td>
+    <td>Texas</td>
+    <td>2,312,717</td>
   </tr>
 </table>
-  <!-- Write your HTML here -->
+ 
   
 </body>
 </html>
